Commit 22/03/2026-2
Add loading screen et compile for the first time